[gd_scene load_steps=3 format=3 uid="uid://dkgn4i61r780j"]

[ext_resource type="Script" path="res://scripts/components/charclasscomponent/CharClassSelection.gd" id="1_ieyck"]
[ext_resource type="PackedScene" uid="uid://dirsk8pf0bxh5" path="res://scenes/player/statdisplay/StatDisplay.tscn" id="2_n16eb"]

[node name="CharClassSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ieyck")

[node name="AvailableClasses" type="ItemList" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.2
anchor_bottom = 1.0
offset_top = 42.0

[node name="Label" type="Label" parent="AvailableClasses"]
custom_minimum_size = Vector2(0, 42)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
grow_horizontal = 2
grow_vertical = 0
text = "Available Classes"

[node name="OwnedClasses" type="ItemList" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_right = 0.4
anchor_bottom = 1.0
offset_top = 42.0
max_columns = 2
same_column_width = true

[node name="Label" type="Label" parent="OwnedClasses"]
custom_minimum_size = Vector2(0, 42)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
grow_horizontal = 2
grow_vertical = 0
text = "Player's Classes"

[node name="StatDisplay" parent="." instance=ExtResource("2_n16eb")]
layout_mode = 1
anchor_left = 0.75
anchor_bottom = 1.0
grow_horizontal = 1
grow_vertical = 1

[node name="ClassDescription" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4
anchor_right = 0.75
anchor_bottom = 1.0
